log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Fri 31 Mar 2023 05:40:33 PM UTC: 
 tests:  0|6
total_score: 0/70
f3e3301
Fri 31 Mar 2023 05:57:12 PM UTC: 
 arraylist.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
39e8831
Fri 31 Mar 2023 06:04:38 PM UTC: 
 arraylist.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:20:12: error: ‘l’ undeclared (first use in this function)
   20 |     return l;
      |            ^
arraylist.c:20:12: note: each undeclared identifier is reported only once for each function it appears in
arraylist.c:21:1: error: control reaches end of non-void function [-Werror=return-type]
   21 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8efc29e
Fri 31 Mar 2023 06:04:48 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
fe51440
Fri 31 Mar 2023 06:20:30 PM UTC: 
 arraylist.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
ffb8e16
Fri 31 Mar 2023 06:23:00 PM UTC: 
 arraylist.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:24:7: error: ‘lista’ undeclared (first use in this function)
   24 |   if (lista->size == lista->capacity){
      |       ^~~~~
arraylist.c:24:7: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
6958ffe
Fri 31 Mar 2023 06:23:15 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
5eb43c7
Fri 31 Mar 2023 06:28:54 PM UTC: 
 arraylist.c | 23 ++++++++++++++++++-----
 1 file changed, 18 insertions(+), 5 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘get_size’:
arraylist.c:59:12: error: ‘l’ undeclared (first use in this function)
   59 |     return l->size;
      |            ^
arraylist.c:59:12: note: each undeclared identifier is reported only once for each function it appears in
arraylist.c:60:1: error: control reaches end of non-void function [-Werror=return-type]
   60 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3678edd
